# shoc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  meson.build  vcpkg.json
bug-reports/comch-consumer-start-lost/: client.c  server.c
doca/: aes_gcm.cpp  aes_gcm.hpp  buffer.cpp  buffer.hpp  buffer_inventory.cpp  buffer_inventory.hpp  buffer_pool.cpp  buffer_pool.hpp  comch_client.cpp  comch_client.hpp  comch_consumer.cpp  comch_consumer.hpp  comch_device.cpp  comch_device.hpp  comch_producer.cpp  comch_producer.hpp  comch_server.cpp  comch_server.hpp  compress.cpp  compress.hpp  context.cpp  context.hpp  coroutine.hpp  device.cpp  device.hpp  dma.cpp  dma.hpp  epoll_handle.cpp  epoll_handle.hpp  error.hpp  event_sources.cpp  event_sources.hpp  logger.cpp  logger.hpp  memory_map.cpp  memory_map.hpp  progress_engine.cpp  progress_engine.hpp  rdma.cpp  rdma.hpp  (+4 more)
doca/comch/: client.cpp  client.hpp  common.hpp  consumer.cpp  consumer.hpp  device.cpp  device.hpp  producer.cpp  producer.hpp  server.cpp  server.hpp
doca/common/: overload.hpp  raw_memory.hpp  status.hpp
doca/coro/: basic_coroutine.hpp  error_receptable.hpp  fiber.hpp  lazy_task.hpp  overload.hpp  receptable.hpp  status_awaitable.hpp  task.hpp  task_promise.hpp  value_awaitable.hpp
experiments/: comch.sh  compression.sh  dma_client.sh  postprocess.sh  postprocess_compression.sh  texify_tsv.awk
progs/: comch_client.cpp  comch_data_client.cpp  comch_data_server.cpp  comch_server.cpp  comch_server_singleshot.cpp  dma_client.cpp  dma_common.hpp  dma_server.cpp  encrypt.cpp  env.hpp  erasure_encode.cpp  erasure_recover.cpp  eth_udp_echo.cpp  flow_geneve_encap.cpp  parallel_compress.cpp  rdma_cm_client.cpp  rdma_cm_server.cpp  rdma_dpu_receive.cpp  rdma_host_send.cpp  rdma_receive.cpp  rdma_send.cpp  simple_compress.cpp  sync_event_dpu.cpp  sync_event_host.cpp  sync_event_local_pci.cpp  sync_event_remote_pci.cpp
progs/devemu/: pci_hotplug.cpp
progs/devemu/pci_dma/: dpu.cpp  host.cpp
progs/eth_rxq/: kernel_fwd.cpp  managed.cpp  proto_splitter.cpp
progs/eth_txq/: send_raw_packet.cpp
progs/flow/: acl.cpp  add_to_meta.cpp  aging.cpp  geneve_encap.cpp
progs/plain_doca/: comch_client.c  comch_server.c  env.h  parallel_compress.c  simple_compress.c
progs/plain_doca/comch_data_client/: client.c  comch_data_client.h  consumer.c  main.c
progs/plain_doca/comch_data_server/: comch_data_server.h  connection.c  main.c  memory.c  server.c
progs/plain_doca/dma_client/: dma.c  dma_client.h  main.c
progs/plain_doca/dma_server/: main.c  server.c
samples/: comch_client.cpp  comch_data_client.cpp  comch_data_server.cpp  comch_server.cpp  comch_server_singleshot.cpp  dma_client.cpp  dma_server.cpp  encrypt.cpp  env.hpp  erasure_encode.cpp  erasure_recover.cpp  eth_udp_echo.cpp  parallel_compress.cpp  rdma_cm_client.cpp  rdma_cm_server.cpp  rdma_receive.cpp  rdma_send.cpp  simple_compress.cpp  sync_event_local_pci.cpp  sync_event_remote_pci.cpp
samples/devemu/: pci_hotplug.cpp
samples/devemu/pci_dma/: dpu.cpp  host.cpp
samples/eth_rxq/: kernel_fwd.cpp  managed.cpp  proto_splitter.cpp
samples/eth_txq/: send_raw_packet.cpp
samples/flow/: acl.cpp  add_to_meta.cpp
samples/plain_doca/: comch_client.c  env.h  simple_compress.c
samples/plain_doca/comch_data_client/: consumer.c  main.c  memory.c
samples/plain_doca/comch_data_server/: connection.c  main.c  server.c
samples/plain_doca/dma_client/: comch.c  common.c  dma_client.h
samples/plain_doca/dma_server/: dma_server.h  memory.c
shoc/: aes_gcm.cpp  aes_gcm.hpp  aligned_memory.hpp  asio_descriptor.hpp  buffer.cpp  buffer.hpp  buffer_inventory.cpp  buffer_inventory.hpp  buffer_pool.cpp  buffer_pool.hpp  compress.cpp  compress.hpp  context.cpp  context.hpp  devemu_pci.cpp  devemu_pci.hpp  device.cpp  device.hpp  dma.cpp  dma.hpp  epoll_handle.cpp  epoll_handle.hpp  erasure_coding.cpp  erasure_coding.hpp  error.hpp  eth_frame.cpp  eth_frame.hpp  eth_rxq.cpp  eth_rxq.hpp  eth_txq.cpp  eth_txq.hpp  event_sources.cpp  event_sources.hpp  flow.cpp  flow.hpp  logger.cpp  logger.hpp  memory_map.cpp  memory_map.hpp  progress_engine.cpp  (+9 more)
shoc/comch/: client.cpp  client.hpp  common.hpp  consumer.cpp  consumer.hpp  producer.cpp  producer.hpp  server.cpp  server.hpp
shoc/common/: accepter_queues.hpp  overload.hpp  raw_memory.hpp  status.hpp
shoc/coro/: error_receptable.hpp  fiber.hpp  status_awaitable.hpp  task.hpp  task_promise.hpp  value_awaitable.hpp
tests/: group_aes_gcm.cpp  group_aligned_mem.cpp  group_compress.cpp  group_dma.cpp  group_engine.cpp  group_erasure_coding.cpp  group_eth_frame.cpp  group_event_sources.cpp  group_sha.cpp
tests/coro/: group_task.cpp  group_value_awaitable.cpp
tools/: generate_testdata.cpp  list_devices.cpp
